--- a/Site da dju/index.html
+++ b/Site da dju/index.html
@@ -12,6 +12,7 @@
             <ul>
                 <li><a href="#home">Home</a></li> <!-- Alterar a ask bar de acordo com os titulos depois-->
                 <li><a href="#portfolio">Portfólio</a></li>
+                <li><img src="path/to/your/image.png" alt="Logo Djulia Delfino" class="logo"></li>
                 <li><a href="#familiares">Familiares</a></li>
                 <li><a href="#amigos">Amigos</a></li>
             </ul>
